--- a/Calendy/src/resources/scss/style.css
+++ b/Calendy/src/resources/scss/style.css
@@ -70,7 +70,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 50%px;
   font-weight: 600;
   cursor: pointer;
 }
