--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -6,207 +6,174 @@ body {
   background-color: #fff;
   display: flex;
   align-items: center;
-  height: 64px; }
-
-.first-part {
-  display: flex; }
-
-.menu-header {
-  border: none;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.3s;
-  background-color: #fff; }
-  .menu-header:hover {
-    background-color: #f0f0f0; }
-
-.menu-header-img {
-  max-width: 20px; }
-
-.beside-menu {
-  display: flex; }
-
-.logo-calendy {
-  width: 48px;
-  height: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.beside-logo {
-  margin-left: 30px;
-  margin-right: 5px;
-  margin-top: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
+  height: 64px;
+  padding: 8px;
+  border-bottom: 1px solid #dadce0; }
+  .header .first-part {
+    display: flex;
+    padding-right: 30px;
+    width: 238px;
+    height: 48px; }
+    .header .first-part .menu-header {
+      border: none;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: background-color 0.3s;
+      background-color: #fff;
+      padding: 12px;
+      margin: 0 4px; }
+      .header .first-part .menu-header:hover {
+        background-color: #f0f0f0; }
+      .header .first-part .menu-header .menu-header-img {
+        max-width: 20px; }
+    .header .first-part .beside-menu {
+      display: flex;
+      align-items: center;
+      width: 137.88px;
+      height: 44px; }
+      .header .first-part .beside-menu .logo-calendy {
+        width: 44px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
+      .header .first-part .beside-menu .beside-logo {
+        font-size: 22px;
+        font-weight: 400;
+        width: 93.88px;
+        height: 24px;
+        margin: 0 0 0 3px;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
 
 .detail-items {
   display: flex;
-  display: flex; }
-
-.current-state {
-  margin-left: 100px;
-  margin-right: 5px;
-  margin-top: 5px;
-  padding: 6px;
-  border: 1px solid;
-  border-radius: 5px;
-  border-color: #dadce0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer; }
-  .current-state:hover {
-    background-color: #f0f0f0; }
-
-.prev-state {
-  margin-left: 20px;
-  margin-right: 5px;
-  color: #5f6368;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-  border-radius: 50%;
-  position: relative;
-  transition: background-color 0.3s; }
-  .prev-state:hover {
-    background-color: #f0f0f0; }
-  .prev-state::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    border-top: 2px solid #5f6368;
-    border-left: 2px solid #5f6368;
-    position: absolute;
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%) rotate(-45deg); }
-
-.next-state {
-  margin-left: 10px;
-  margin-right: 5px;
-  color: #5f6368;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 8px;
-  border-radius: 50%;
-  position: relative;
-  transition: background-color 0.3s; }
-  .next-state:hover {
-    background-color: #f0f0f0; }
-  .next-state::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    border-top: 2px solid #5f6368;
-    border-left: 2px solid #5f6368;
-    position: absolute;
-    top: 50%;
-    left: 45%;
-    transform: translate(-50%, -50%) rotate(135deg); }
-
-.currentDate {
-  margin-left: 10px;
-  margin-right: 5px;
-  margin-top: 5px;
-  display: flex;
-  justify-content: center;
+  height: 48px;
   align-items: center; }
+  .detail-items .state {
+    height: 48px;
+    width: 103.58px;
+    justify-content: center; }
+    .detail-items .state .current-state {
+      width: 80px;
+      height: 80%;
+      margin-top: 5px;
+      padding: 6px;
+      border: 1px solid;
+      border-radius: 5px;
+      border-color: #dadce0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 16px;
+      font-weight: 600;
+      cursor: pointer; }
+      .detail-items .state .current-state:hover {
+        background-color: #f0f0f0; }
+  .detail-items .prev-state {
+    margin-right: 5px;
+    color: #5f6368;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border-radius: 50%;
+    position: relative;
+    transition: background-color 0.3s; }
+    .detail-items .prev-state:hover {
+      background-color: #f0f0f0; }
+    .detail-items .prev-state::before {
+      content: "";
+      width: 10px;
+      height: 10px;
+      border-top: 2px solid #5f6368;
+      border-left: 2px solid #5f6368;
+      position: absolute;
+      top: 50%;
+      left: 55%;
+      transform: translate(-50%, -50%) rotate(-45deg); }
+  .detail-items .next-state {
+    margin-right: 5px;
+    color: #5f6368;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    border-radius: 50%;
+    position: relative;
+    transition: background-color 0.3s; }
+    .detail-items .next-state:hover {
+      background-color: #f0f0f0; }
+    .detail-items .next-state::before {
+      content: "";
+      width: 10px;
+      height: 10px;
+      border-top: 2px solid #5f6368;
+      border-left: 2px solid #5f6368;
+      position: absolute;
+      top: 50%;
+      left: 45%;
+      transform: translate(-50%, -50%) rotate(135deg); }
+  .detail-items .currentDate {
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 400; }
 
 /* Container cho các nút */
 .header-buttons {
+  height: 48px;
   display: flex;
   margin-left: auto;
   justify-content: flex-end;
-  align-items: center; }
-
-/* Kiểu cho nút sign up */
-.register-button {
-  background: transparent;
-  width: 97px;
-  height: 50px;
-  border-radius: 5px;
-  border-color: #dadce0;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer;
-  margin-right: 10px;
-  /* Khoảng cách với nút login */ }
-  .register-button:hover {
-    background-color: #fff; }
-
-/* Kiểu cho nút login */
-.login-button {
-  background: transparent;
-  width: 80px;
-  height: 50px;
-  border-radius: 5px;
-  border-color: #dadce0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer; }
-  .login-button:hover {
-    background-color: #fff; }
-
-/* Container cho các nút */
-.header-buttons {
-  display: flex;
-  margin-left: auto;
-  justify-content: flex-end;
-  align-items: center; }
-
-/* Kiểu cho nút sign up */
-.register-button {
-  background: transparent;
-  width: 97px;
-  height: 50px;
-  border-radius: 5px;
-  border-color: #dadce0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer;
-  margin-right: 10px;
-  /* Khoảng cách với nút login */ }
-  .register-button:hover {
-    background-color: #fff; }
-
-/* Kiểu cho nút login */
-.login-button {
-  background: transparent;
-  width: 80px;
-  height: 50px;
-  border-radius: 5px;
-  border-color: #dadce0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  cursor: pointer; }
-  .login-button:hover {
-    background-color: #fff; }
+  gap: 10px;
+  /* Kiểu cho nút sign up */
+  /* Kiểu cho nút login */ }
+  .header-buttons .register-button {
+    background: transparent;
+    width: 80px;
+    height: 38.4px;
+    border: 1px solid;
+    border-radius: 5px;
+    border-color: #dadce0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer; }
+    .header-buttons .register-button:hover {
+      background-color: #fff; }
+    .header-buttons .register-button .register {
+      height: 100%;
+      width: 100%; }
+  .header-buttons .login-button {
+    background: transparent;
+    width: 80px;
+    height: 38.4px;
+    border: 1px solid;
+    border-radius: 5px;
+    border-color: #dadce0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer; }
+    .header-buttons .login-button:hover {
+      background-color: #fff; }
 
 .container-fluid {
   position: relative; }
