--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -122,5 +122,9 @@
 </div>
 </div>
 </div>
-
+<script type="module">
+    const user_id = "{{userId}}";
+    import calendarFunc from './calendar.js';
+    import eventFunc from './event.js';
+</script>
 <script type="module" src="/js/index.js"></script>
