--- a/Calendy/src/resources/views/layouts/main.hbs
+++ b/Calendy/src/resources/views/layouts/main.hbs
@@ -18,6 +18,10 @@
         {{> header1}}
     {{else if header2}}
         {{> header2}}
+    {{else if header3}}
+        {{> header3}}
+    {{else if header0}}
+        {{> header0}}
     {{/if}}
     
     {{{body}}}
