--- a/Calendy/src/resources/views/partials/header0.hbs
+++ b/Calendy/src/resources/views/partials/header0.hbs
@@ -5,7 +5,7 @@
         <h3 class="date"></h3>
     </div>
     <div class="right">
-        <div class="button login-button" style="display: none;">login</div>
+        <div class="button login-button">login</div>
         <div class="button logout-button">logout</div>
     </div>
 </div>
