--- a/Calendy/src/resources/views/partials/header3.hbs
+++ b/Calendy/src/resources/views/partials/header3.hbs
@@ -6,7 +6,7 @@
     </div>
     <div class="right">
         <div class="button login-button" style="display: none;">login</div>
-        <div class="button logout-button">logout</div>
+        <div class="button logout-button" style="display: none;">logout</div>
     </div>
 </div>
 
