--- a/Calendy/src/resources/views/partials/header1.hbs
+++ b/Calendy/src/resources/views/partials/header1.hbs
@@ -5,12 +5,9 @@
         <h3 class="date"></h3>
     </div>
     <div class="right">
-        <div class="button">login</div>
+        <div class="button login-button">login</div>
+        <div class="button logout-button" style="display: none;">logout</div>
     </div>
 </div>
 
-<script>
-    let dateContainer = document.querySelector('.header .left .date');
-    let date = new Date();
-    dateContainer.innerText = date.getDate() + '/' + (date.getMonth() + 1) + '/' + date.getFullYear();
-</script>
+<script type="module" src="/js/header.js"></script>
