--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -65,13 +65,14 @@
             <div class="left">
 
                 {{!-- add event button --}}
-
-                <button class="add-event event-button">
+                <div id="create-button">
+                    <button class="add-event event-button">
                     <i class="fas fa-plus icon-add-event"></i>
-                    <span class="text-add-event">
-                        New Event
-                    </span>
-                </button>
+                    <div class="text-add-event">
+                        Add Schedule
+                    </div>
+                    </button>
+                </div>
 
                 <div class="calendar-main">
                     <div class="calendar">
@@ -87,13 +88,13 @@
                             </div>
                         </div>
                         <div class="weekdays">
-                            <div>Mon</div>
-                            <div>Tue</div>
-                            <div>Wed</div>
-                            <div>Thu</div>
-                            <div>Fri</div>
-                            <div class="weekend">Sat</div>
-                            <div class="weekend">Sun</div>
+                            <div>Mo</div>
+                            <div>Tu</div>
+                            <div>We</div>
+                            <div>Th</div>
+                            <div>Fr</div>
+                            <div class="weekend">Sa</div>
+                            <div class="weekend">Su</div>
                         </div>
                         <div class="days"></div>
                     </div>
