--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -12,50 +12,59 @@ body {
 }
 
 .header {
-    height: 100px;
+    height: 64px;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 2px solid $boderColor;
+    border-bottom: 1px solid $boderColor;
 
     .left {
         display: flex;
-        height: 100px;
+        height: 48px;
         align-items: center;
-        padding-left: 50px;
+        padding-left: 40px;
 
         .logo {
-            width: 90px;
-            height: 90px;
+            width: 45px;
+            height: 45px;
+            margin-right: 10px;
         }
 
         .name {
+            height: 44px;
             font-weight: 500;
             color: $textColor1;
-            border-right: 2px solid $boderColor;
+            //border-right: 1px solid $boderColor;
             padding-right: 20px;
+            font-size: 24px;
+            margin-top: 5px;
         }
 
         .date {
-            padding-left: 20px;
+            padding-left: 70px;
             font-weight: 500;
+            font-size: 22px;
         }
     }
 
     .right {
-        padding-right: 50px;
+        padding-right: 40px;
         display: flex;
         .button {
+            width: 80px;
+            height: 38px;
             background-color: $backgroundColor2;
             font-size: 1rem;
             color: $textColor1;
-            padding: 0px 20px;
-            margin: 0px 5px;
-            border-radius: 10px;
-            border: 2px solid $boderColor;
+            margin: 0px 8px;
+            border-radius: 5px;
+            border: 1px solid $boderColor;
             cursor: pointer;
             font-weight: 500;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     }
 }
@@ -253,37 +262,49 @@ body {
     background-color: $backgroundColor2;
 
     .event-button {
-        border-width: 0px;
-        border-radius: 25px;
+        box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
         background-color: $textColor2;
         color: $backgroundColor2;
+        width: 135px;
+        border-radius: 10px;
+        border: 0px solid;
         padding: 2px 10px;
-        min-height: 48px;
+        min-height: 30px;
         align-items: center;
         display: flex;
-        box-shadow: 4px 4px 8px #8888888a;
+        transition: border .28s cubic-bezier(.4,0,.2,1), box-shadow .28s cubic-bezier(.4,0,.2,1);
 
         .icon-add-event {
             padding: 0 5px;
-            font-size: 150%;
+            font-size:100%;
+            color: #f3f7ff;
+            ::before{
+                width: 36px;
+                height: 36px;
+            }
         }
 
         .text-add-event {
-            padding: 0 5px;
+            display: flex;
             font-weight: 500;
+            width: 90px;
+            height: 36px;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            color: #f3f7ff;
         }
-
+        
         &:hover {
-            box-shadow: 4px 4px 8px transparent;
             transform: translateY(2px);
         }
     }
 
     .calendar-main {
         margin-top: 20px;
-        padding: 0 20px;
+        padding: 0 0 0 10px;
         background-color: $backgroundColor2;
-        border-top: 2px solid $textColor3;
+        //border-top: 1px solid $boderColor;
 
         .calendar {
             position: relative;
@@ -439,6 +460,7 @@ body {
     background-color: $backgroundColor2;
     min-height: 100vh;
     margin-top: 20px;
+    color: $textColor1;
 
     .week-calendar {
         display: flex;
@@ -448,8 +470,8 @@ body {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            border: 2px solid $boderColor;
-            border-bottom: 0px;
+            //border: 2px solid $boderColor;
+            //border-bottom: 0px;
 
             div {
                 width: 14.285%;
@@ -457,13 +479,13 @@ body {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                font-size: 1.5rem;
+                font-size: 14;
                 font-weight: 500;
                 text-transform: capitalize;
-                border-left: 2px solid $boderColor;
+                //border-left: 2px solid $boderColor;
 
                 &:first-child {
-                    border-left: 0px;
+                    //border-left: 0px;
                 }
             }
 
@@ -477,7 +499,7 @@ body {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-            border: 2px solid $boderColor;
+            border: 1px solid $boderColor;
             border-top: 0px;
             border-bottom: 0px;
 
@@ -489,7 +511,7 @@ body {
                 font-size: 1.5rem;
                 color: $textColor1;
                 font-weight: 500;
-                border-left: 2px solid $boderColor;
+                border-left: 1px solid $boderColor;
 
                 &:first-child {
                     border-left: 0px;
@@ -506,7 +528,7 @@ body {
             flex-direction: row;
             justify-content: space-between;
             background-color: $backgroundColor1;
-            border: 2px solid $boderColor;
+            border: 1px solid $boderColor;
             border-top: 0px;
 
             .events {
@@ -515,8 +537,8 @@ body {
                 display: flex;
                 align-items: center;
                 font-size: 1.5rem;
-                border-left: 2px solid $boderColor;
-                border-top: 2px solid $boderColor;
+                border-left: 1px solid $boderColor;
+                border-top: 1px solid $boderColor;
                 flex-direction: column;
 
                 .event {
