--- a/Calendy/src/resources/views/partials/header0.hbs
+++ b/Calendy/src/resources/views/partials/header0.hbs
@@ -1,12 +1,12 @@
 <div class="header">
     <div class="left">
         <img class="logo" src="/img/logo.png">
-        <h1 class="name">Calendy</h1>
-        <h3 class="date"></h3>
+        <div class="name">Calendy</div>
+        <div class="date"></div>
     </div>
     <div class="right">
-        <div class="button login-button">login</div>
-        <div class="button logout-button">logout</div>
+        <div class="button login-button">Login</div>
+        <div class="button logout-button" style="display: none;">Logout</div>
     </div>
 </div>
 
