--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -551,8 +551,7 @@ body {
                     align-items: center;
                     cursor: pointer;
                     margin-top: 10px;
-                    border-bottom: 2px solid $boderColor;
-                    border-left: 2px solid $boderColor;
+                    border: 2px solid $boderColor;
                     overflow-x: hidden;
                     box-shadow: 4px 4px 8px #8888888a;
 
