--- a/Calendy/src/resources/views/layouts/main.hbs
+++ b/Calendy/src/resources/views/layouts/main.hbs
@@ -14,10 +14,14 @@
 </head>
 
 <body>
+
+    {{!-- home page khi chua dang nhap --}}
     {{#if header1}}
         {{> header1}}
+    {{!-- home page khi da dang nhap --}}
     {{else if header2}}
         {{> header2}}
+    {{!-- login page --}}
     {{else if header3}}
         {{> header3}}
     {{else if header0}}
@@ -25,6 +29,12 @@
     {{/if}}
     
     {{{body}}}
+
+    <script>
+        // bao cho client biet user da dang nhap hay chua !
+        // bien logined co the duoc su dung o tat ca cac file public/js, chu y de tranh tao bien trung ten
+        var logined = "{{header2}}";
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
