--- a/Calendy/src/resources/views/partials/header2.hbs
+++ b/Calendy/src/resources/views/partials/header2.hbs
@@ -5,8 +5,16 @@
         <div class="date"></div>
     </div>
     <div class="right">
-        <div class="button login-button" style="display: none;">login</div>
-        <div class="button logout-button">logout</div>
+        <div class="button login-button" style="display: none;">Login</div>
+        <div class="profile">
+            <button class="profile-button">
+                <img class="profile-picture" src="/img/profile-picture.png" alt="">
+            </button>
+            <ul class="menu">
+                <li class="selection logout-button">Logout</li>
+            </ul>
+        </div>
+        
     </div>
 </div>
 
