--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -5,6 +5,7 @@ $textColor1: #323b4b;
 $textColor2: #005ff9;
 $textColor3: #8a94a6;
 $boderColor: #dadce0;
+$hoverButtonColor: #f0f0f0;
 
 body {
     background-color: $backgroundColor2;
@@ -29,6 +30,7 @@ body {
             width: 45px;
             height: 45px;
             margin-right: 10px;
+            //cursor: pointer;
         }
 
         .name {
@@ -39,6 +41,7 @@ body {
             padding-right: 20px;
             font-size: 24px;
             margin-top: 5px;
+            //cursor: pointer;
         }
 
         .date {
@@ -60,11 +63,76 @@ body {
             margin: 0px 8px;
             border-radius: 5px;
             border: 1px solid $boderColor;
+            &:hover {
+                background-color: #f0f0f0;
+            }
             cursor: pointer;
             font-weight: 500;
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+
+        .profile {
+            border-radius: 50%;
+            border: 0px;
+            width: 40px;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .profile-button {
+                width: 38px;
+                height: 38px;
+                border-radius: 50%;
+                border: 0px solid $boderColor;
+                color: #ffffff;
+                align-items: center;
+                justify-content: center;
+                padding: 0px;
+                .profile-picture{
+                    width: 38px;
+                    height: 38px;
+                    border-radius: 50%;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            .menu {
+                list-style: none;
+                padding: 0.2rem 0.5rem;
+                background: $backgroundColor1;
+                border: 1px $boderColor solid;
+                box-shadow: 0 0.5rem 1em rgba(0, 0, 0, 0.2);
+                border-radius: 0.5em;
+                color: $textColor1;
+                position: absolute;
+                top: 3.5em;
+                left: 93%;
+                width: 80px;
+                transform: translateX(-50%);
+                opacity: 0;
+                display: none;
+                transition: 0.2s;
+                z-index: 1;
+                .selection {
+                    //padding: 0.7em 0.5em;
+                    display: flex;
+                    justify-content: center;
+                    margin: 0.1em 0;
+                    
+                    //border-radius: 10px;
+                    font-weight: 500;
+                    cursor: pointer;
+                    &:hover {
+                        background: $hoverButtonColor;
+                    }
+                }
+            }
+            .menu-open {
+                display: block;
+                opacity: 1;
+            }
         }
     }
 }
