--- a/Calendy/src/resources/views/partials/header1.hbs
+++ b/Calendy/src/resources/views/partials/header1.hbs
@@ -5,8 +5,8 @@
         <div class="date"></div>
     </div>
     <div class="right">
-        <div class="button login-button">login</div>
-        <div class="button logout-button" style="display: none;">logout</div>
+        <div class="button login-button">Login</div>
+        <div class="button logout-button" style="display: none;">Logout</div>
     </div>
 </div>
 
